# midguard-api

./: .env  .gitignore  Cargo.toml  README.md  data.json
migrations/: 0000_create_price_history_table.down.sql  0000_create_price_history_table.up.sql  0001_create_swap_history_table.down.sql  0001_create_swap_history_table.up.sql  0002_create_earning_history_table.down.sql  0002_create_earning_history_table.up.sql  0003_create_rune_table.down.sql  0003_create_rune_table.up.sql  0_create_price_history_table.up.sql  1_create_swap_history_table.up.sql  2_create_earning_history_table.down.sql  2_create_earning_history_table.up.sql  3_create_rune_table.down.sql  3_create_rune_table.up.sql
src/: error.rs  main.rs
src/client/: proxy.rs
src/config/: database.rs
src/constant/: enums.rs
src/cronjobs/: jobs.rs
src/db/: database.rs
src/dtos/: filters.rs  mod.rs  responses.rs
src/model/: earning_history.rs  earning_history_pool.rs  mod.rs  pool.rs  price_history.rs  responses.rs  rune.rs  rune_pool.rs  swap_history.rs
src/repositories/: mod.rs  mongodb.rs  surrealdb.rs
src/repository/: earning_history.rs  earning_history_pool.rs  price_history.rs  rune_pool.rs  swap_history.rs
src/routes/: earning_history_route.rs  mod.rs  price_history_route.rs  rune_pool_route.rs  swap_history_route.rs
src/service/: earning_history_service.rs  mod.rs  price_history_service.rs  run_pool_service.rs  swap_history_service.rs
src/utils/: conversions.rs
