[package]
name = "midguard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" ] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
chrono = "0.4"

