[package]
name = "midguard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
rust_decimal = { version = "1.33", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.6", features = ["serde"] }
anyhow = "1.0.95"
serde_with = "3.12.0"
once_cell = "1.20.2"
cron = "0.15.0"
sqlx = {version = "0.8.3", features = ["runtime-tokio-rustls","postgres", "chrono", "rust_decimal"]}
rustls = "0.23.22"
mongodb = "3.2.3"
paris = { version = "1.5", features = ["macros"] }
futures = "0.3.31"
surrealdb = "2.2.1"
